...
        button.addTarget(self, action: #selector(buttonTapped), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        
        button.setTitleColor(UIColor.ypBlack, for: .normal)
        button.backgroundColor = UIColor.ypWhite
        button.layer.cornerRadius = 16
        button.accessibilityIdentifier = "Authenticate"
        
        return button
    }
    
    private func setupConstraints() {
        guard let authImageView = authImageView,
...
    
    private func configureBackButton() {
        navigationController?.navigationBar.backIndicatorImage = UIImage(resource: .navBackButton)
        navigationController?.navigationBar.backIndicatorTransitionMaskImage = UIImage(resource: .navBackButton)
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: .plain, target: nil, action: nil)
        navigationItem.backBarButtonItem?.tintColor = UIColor.ypBlack
        navigationItem.backBarButtonItem?.accessibilityIdentifier = "back_button"
    }
    
    @objc private func buttonTapped() {
        performSegue(withIdentifier: showWebViewSegueIdentifier, sender: self)
    }
}
...
